--- a/client/src/ui/base/_themes.scss
+++ b/client/src/ui/base/_themes.scss
@@ -189,7 +189,7 @@
   --ai-help-accent-background-color: #{$mdn-color-light-theme-green-50}10;
 
   --observatory-bg: rgba(242, 242, 245, 1);
-  --observatory-bg-secondary: #e7f3fd;
+  --observatory-bg-secondary: rgba(255, 255, 255, 1);
   --observatory-accent: rgba(155, 101, 255, 1);
   --observatory-border: rgba(228, 228, 246, 1);
   --observatory-border-accent: rgba(90, 35, 215, 1);
@@ -488,9 +488,9 @@
   --ai-help-icon: #{$mdn-color-dark-theme-green-30};
   --ai-help-accent-background-color: #{$mdn-color-light-theme-green-50}30;
 
-  --observatory-bg: #000;
-  --observatory-bg-secondary: #{$mdn-color-dark-theme-blue-90};
-  --observatory-accent: #{$mdn-color-dark-theme-blue-30};
+  --observatory-bg: rgba(52, 52, 52, 1);
+  --observatory-bg-secondary: rgba(0, 0, 0, 1);
+  --observatory-accent: rgba(163, 136, 255, 1);
   --observatory-border: #{$mdn-color-neutral-70};
   --observatory-border-accent: #{$mdn-color-dark-theme-blue-20};
   --observatory-table-bg: #{$mdn-color-neutral-90};
